@@ -10,6 +10,7 @@
  * aggregates_in_slice only finds one aggregate (#1174)
  * Verify the signer of a speaks-for credential before storing it. (#1175)
  * Extract sliver expiration at FOAM (so OESS), SFA, and GRAM AMs. (#1173)
+ * getBrowser utility must handle not finding browser version. (#1176)
 
 == 2.20 ==
  * Require unique name for rspecs (#784)
